# genai-detection

./: .gitignore  Dockerfile  Dockerfile.test  README.md  config.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: .github-actions.yml  build_docker_image.yml  build_image_and_pytest_in_container.yml  deploy_hfspaces.yml  download_dataset.yml  run_pytest_poetry.yml
conf/: logging.yml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
environments/: Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.gradio  Dockerfile.space
scripts/: README.md  add_to_wnb.py  api_sample_request.sh  app.sh  download_dataset.py  upload_dataset.py
space/: add_header.sh  space_header.md
src/api/: Dockerfile  README.md  api.py
src/data_utils/: download_dataset.py
src/frontend/: README.md  frontend.py
src/gen_ai_detection/: __init__.py  __main__.py  settings.py
src/genai_detection/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/genai_detection/data_utils/: README.md  add_to_wnb.py
src/genai_detection/datasets/: image_dataset.py  iterable_image_dataset.py
src/genai_detection/pipelines/data_processing/: nodes.py  pipeline.py
src/genai_detection/pipelines/evaluation/: nodes.py  pipeline.py
src/genai_detection/utils/: hatch_dict.py
src/genai_utils/: README.md  model.py  training.py
src/tests/: conftest.py  test_run.py
src/tests/data/: test_download.py
src/utils/: config.py  model.py  training.py
src/webapp/: main.py
tests/: conftest.py  test_run.py
tests/data/: test_download.py
tests/pipelines/: test_data_science.py
(+6 files in other folders)
