[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "genai_detection"
project_name = "GenAI Detection"
kedro_init_version = "0.19.3"

[tool.poetry]
name = "GenAI Detection"
# Here you can change the config for project version
version = "0.1.0" # remember to descritbe the changes in the CHANGELOG.md
description = "Detection of AI Generated Images"
authors = ["Paweł Grabiński"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
kedro = "^0.19.3"
kedro-datasets = {version="^1.0.0", extras=["pandas.CSVDataset"]}
wandb = "^0.16.4"
tqdm = "^4.66.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
kedro-viz = "^8.0.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
black = "^22.0.0"
flake8 = "^6.0.0"
ipykernel = "^6.16.0"
pre-commit = "^3.0.0"
isort = "^5.10.1"
jupyter = "^1.0.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/genai_detection -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Black takes care of line-too-long
